[gd_scene load_steps=18 format=3 uid="uid://dx5ory3yth7fh"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_2x5gi"]
[ext_resource type="Shader" path="res://Shaders/transition.gdshader" id="2_qbtis"]
[ext_resource type="Theme" uid="uid://qhr0010dk67q" path="res://Themes/hsdvania.tres" id="3_3uh6r"]
[ext_resource type="FontFile" uid="uid://6k8qt3jkoc8x" path="res://Assets/Fonts/OptimusPrincepsSemiBold.ttf" id="3_7wer8"]
[ext_resource type="AudioStream" uid="uid://bt8tfcw8xxd0l" path="res://Audio/Sfx/menu-button-88360.mp3" id="5_33i56"]
[ext_resource type="AudioStream" uid="uid://djraom6u0jar6" path="res://Audio/Sfx/gong.mp3" id="6_p08nm"]
[ext_resource type="AudioStream" uid="uid://ci6js06s3fu1k" path="res://Audio/Music/04 Evil Garden.mp3" id="7_gvusp"]
[ext_resource type="AudioStream" uid="uid://cgb7shpdoaebk" path="res://Audio/Sfx/hsdvaniasfx.mp3" id="7_sq6hm"]
[ext_resource type="PackedScene" uid="uid://ck8cocmaryugc" path="res://Scenes/Sound/sfx_handler.tscn" id="8_cus2v"]
[ext_resource type="AudioStream" uid="uid://b4ip72rfjg162" path="res://Audio/Sfx/goodbye.mp3" id="9_f85gm"]
[ext_resource type="PackedScene" uid="uid://cqercf02o0yep" path="res://Scenes/Sound/MusicHandler.tscn" id="10_ukr7w"]
[ext_resource type="PackedScene" uid="uid://b67r3klauhadi" path="res://Scenes/UI/settings.tscn" id="12_nl856"]
[ext_resource type="PackedScene" uid="uid://d3v78socwb884" path="res://Scenes/3D/vorlesungssaal_menu.tscn" id="12_vimux"]
[ext_resource type="Texture2D" uid="uid://dj3ds8wu02i36" path="res://Shaders/CloudMask.png" id="14_bvye5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tldu2"]
shader = ExtResource("2_qbtis")
shader_parameter/player_screen_pos = Vector2(0.5, 0.5)
shader_parameter/progress = 0.0
shader_parameter/pixel_size = 70.0
shader_parameter/mask_pixel_size = 70.0
shader_parameter/tint_color = Color(0.567, 0.361, 0.361, 1)
shader_parameter/blur_amount = 5.0
shader_parameter/MASK_TEXTURE = ExtResource("14_bvye5")

[sub_resource type="LabelSettings" id="LabelSettings_ukipp"]
font = ExtResource("3_7wer8")
font_size = 128
font_color = Color(0.9, 0.9, 0.9, 1)
shadow_size = 0
shadow_color = Color(0.375252, 0.0113582, 9.62615e-08, 1)
shadow_offset = Vector2(10, 10)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ev50"]

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2x5gi")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="UI" type="CanvasLayer" parent="."]

[node name="Transition" type="ColorRect" parent="UI"]
z_index = 1
texture_filter = 1
texture_repeat = 1
material = SubResource("ShaderMaterial_tldu2")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="UI"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 96

[node name="VBoxContainer" type="VBoxContainer" parent="UI/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Label" type="Label" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 128
text = "hsdvania"
label_settings = SubResource("LabelSettings_ukipp")
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
theme_override_styles/separator = SubResource("StyleBoxEmpty_5ev50")

[node name="Spielen" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_3uh6r")
theme_type_variation = &"FlatButton"
theme_override_font_sizes/font_size = 64
text = "Spielen"

[node name="Optionen" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_3uh6r")
theme_override_font_sizes/font_size = 64
text = "Optionen
"

[node name="Beenden" type="Button" parent="UI/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("3_3uh6r")
theme_override_font_sizes/font_size = 64
text = "Beenden
"

[node name="UiHoverSfx" parent="UI/MarginContainer/VBoxContainer" instance=ExtResource("8_cus2v")]
stream = ExtResource("5_33i56")

[node name="GongSfx" parent="UI/MarginContainer/VBoxContainer" instance=ExtResource("8_cus2v")]
stream = ExtResource("6_p08nm")

[node name="HsdVaniaSfx" parent="UI/MarginContainer/VBoxContainer" instance=ExtResource("8_cus2v")]
stream = ExtResource("7_sq6hm")

[node name="QuitSfx" parent="UI/MarginContainer/VBoxContainer" instance=ExtResource("8_cus2v")]
stream = ExtResource("9_f85gm")

[node name="Scene" parent="." instance=ExtResource("12_vimux")]
position = Vector2(561, 367)
scale = Vector2(2.325, 2.325)

[node name="MusicHandler" parent="." instance=ExtResource("10_ukr7w")]
stream = ExtResource("7_gvusp")
volume_db = -5.0
autoplay = true

[node name="Settings" parent="." instance=ExtResource("12_nl856")]
layout_mode = 1

[connection signal="mouse_entered" from="UI/MarginContainer/VBoxContainer/Spielen" to="." method="_on_spielen_mouse_entered"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/Spielen" to="." method="_on_spielen_pressed"]
[connection signal="mouse_entered" from="UI/MarginContainer/VBoxContainer/Optionen" to="." method="_on_optionen_mouse_entered"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/Optionen" to="." method="_on_optionen_pressed"]
[connection signal="mouse_entered" from="UI/MarginContainer/VBoxContainer/Beenden" to="." method="_on_beenden_mouse_entered"]
[connection signal="pressed" from="UI/MarginContainer/VBoxContainer/Beenden" to="." method="_on_beenden_pressed"]
